- Today cases - Tomorrow cases - Weekly cases - Case Details

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity
             android:name=".views.HomeActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".views.CaseDetailsActivity"></activity>
     </application>
 
 </manifest>
