--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,14 @@
             android:name=".views.HomeActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".views.CaseDetailsActivity" />
-        <activity android:name=".views.AllCasesActivity"></activity>
+        <activity android:name=".views.AllCasesActivity" />
+        <activity android:name=".views.MatterReceivedActivity" />
+        <activity android:name=".views.MatterSentActivity" />
+        <activity android:name=".views.PasswordResetActivity" />
+        <activity android:name=".views.CounselDeskActivity" />
+        <activity android:name=".views.CounselDetailsActivity" />
+        <activity android:name=".views.LegalQueriesActivity" />
+        <activity android:name=".views.QueryDetailsActivity"></activity>
     </application>
 
 </manifest>
