--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,8 @@
         <activity android:name=".views.CounselDeskActivity" />
         <activity android:name=".views.CounselDetailsActivity" />
         <activity android:name=".views.LegalQueriesActivity" />
-        <activity android:name=".views.QueryDetailsActivity"></activity>
+        <activity android:name=".views.QueryDetailsActivity" />
+        <activity android:name=".views.AccountDetailsActivity"></activity>
     </application>
 
 </manifest>
