--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".views.SplashActivity"
             android:screenOrientation="portrait">
@@ -42,7 +42,8 @@
         <activity android:name=".views.CounselDetailsActivity" />
         <activity android:name=".views.LegalQueriesActivity" />
         <activity android:name=".views.QueryDetailsActivity" />
-        <activity android:name=".views.AccountDetailsActivity"></activity>
+        <activity android:name=".views.AccountDetailsActivity" />
+        <activity android:name=".views.AddCaseActivity"></activity>
     </application>
 
 </manifest>
