--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,8 @@
         <activity android:name=".views.MatterDetailsActivity" />
         <activity android:name=".views.ProfessionalFeeActivity" />
         <activity android:name=".views.ProfessionFeeDetailActivity" />
-        <activity android:name=".views.AddPaymentActivity"></activity>
+        <activity android:name=".views.AddPaymentActivity" />
+        <activity android:name=".views.JobsListActivity"></activity>
     </application>
 
 </manifest>
