--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,7 +90,8 @@
         <activity
             android:name=".views.CalendarActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".views.CaseHistoryActivity"></activity>
+        <activity android:name=".views.CaseHistoryActivity" />
+        <activity android:name=".views.PaymentHistoryActivity"></activity>
     </application>
 
 </manifest>
